Fix alignment within a form, change some anchors

--- a/process/css/_base.css
+++ b/process/css/_base.css
@@ -57,10 +57,8 @@ iframe {
   background: transparent;
 }
 .disclaimer {
-  margin-left: 1.5rem;
-  margin-top: 3rem;
+  margin: 3rem 1rem 2rem 1.5rem;
   @media $small {
-    margin-left: 4rem;
-    margin-top: 5rem;
+    margin: 5rem 2rem 3rem 4rem;
   }
 }
