--- a/process/css/sections/_contact.css
+++ b/process/css/sections/_contact.css
@@ -93,7 +93,6 @@
   }
   textarea {
     display: block;
-    min-height: 20vh;
     resize: none;
     outline-color: color($main tint(20%))
   }
