--- a/process/css/sections/_membership.css
+++ b/process/css/sections/_membership.css
@@ -75,6 +75,7 @@
 
     .ceoimage {
       height: 65vh;
+      max-height: 50rem;
       img {
         width: 50%;
         right:0;
